--- a/SimonRisa/.classpath
+++ b/SimonRisa/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Student 6/Desktop/GUI.jar"/>
+	<classpathentry kind="lib" path="/Users/Risa/Desktop/School Work/Senior/GUI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
