--- a/SimonRisa/.classpath
+++ b/SimonRisa/.classpath
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="lib"/>
-	<classpathentry kind="lib" path="lib/GUI.jar"/>
-=======
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="library/GUI.jar"/>
->>>>>>> branch 'master' of https://github.com/risakuma/simonRisa
 	<classpathentry kind="output" path="bin"/>
 </classpath>
