--- a/SimonRisa/.classpath
+++ b/SimonRisa/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="library/GUI.jar"/>
+	<classpathentry kind="lib" path="src/newLib/gui.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
